<resources>
    <string name="app_name">ScrumKit</string>
    <string name="mail_hint">Введите адрес электронной почты</string>
    <string name="mail_rep_hint">Повторите адрес электронной почты</string>
    <string name="pass_hint">Введите пароль</string>
    <string name="pass_rep_hint">Повторите пароль</string>
    <string name="valid_btn">Войти</string>
    <string name="valid_google_btn">Вход через Google</string>
    <string name="reg_hint_btn">Зарегистрироваться</string>
    <string name="reg_btn">Регистрация</string>
    <string name="forget_pass_btn">Забыли пароль?</string>
    <string name="return_to_auth">Вход</string>
    <string name="send_code_btn">Выслать код восстановления на почту</string>
    <string name="addPhoto">ДОБАВИТЬ ВЛОЖЕНИЕ</string>
    <string name="taskName">Название задачи</string>
    <string name="taskTeg">Нажмите, чтобы добавить заметки…</string>
    <string name="addPoint">ДОБАВИТЬ ПУНКТ СПИСКА</string>
    <string name="taskOptions">Назначения и детали</string>
    <string name="addEmployee">Добавить исполнителя</string>
    <string name="addProject">Добавить проект</string>
    <string name="addStatus">Добавить статус</string>
    <string name="addCalendar">Добавить сроки</string>
    <string name="addProjects">Добавить проекты</string>
    <string name="projectname">Название проекта</string>
    <string name="addEmployees">Участники</string>
    <string name="addnameoremail">Имя пользователя или email</string>
    <string name="createproject">Создать проект</string>
    <array name="status">
        <item>Открытие</item>
        <item>В разработке</item>
        <item>Готово</item>
    </array>
    <array name="TaskType">
        <item>Общая задача</item>
        <item>Разработка</item>
        <item>Тестирование</item>
    </array>
    <array name="EmployeeType">
        <item>Scrum-master</item>
        <item>Разработчик</item>
        <item>Тестировщик</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>