<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".backgroundActivity.CreateNewTask">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:background="@drawable/round"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <EditText
            android:id="@+id/taskName"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#cfd8dc"
            android:hint="@string/taskName"
            android:textCursorDrawable="@color/grey"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/taskDesc"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#cfd8dc"
            android:hint="@string/taskTeg"
            android:textCursorDrawable="@color/grey"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskName" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:background="@drawable/round"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <EditText
            android:id="@+id/listPoint"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_add_blue"
            android:drawablePadding="10dp"
            android:hint="@string/addPoint"
            android:textCursorDrawable="@color/grey"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:background="@drawable/round"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <EditText
            android:id="@+id/addPoint"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_add_blue"
            android:drawablePadding="10dp"
            android:enabled="false"
            android:hint="@string/addPhoto"
            android:textCursorDrawable="@color/grey"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/round"
        android:elevation="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:text="@string/taskOptions"
            android:textColor="@color/blue" />

        <EditText
            android:id="@+id/addEmployee"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/adduser"
            android:drawablePadding="10dp"
            android:enabled="false"
            android:hint="@string/addEmployee"
            android:textCursorDrawable="@color/grey"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/addProjectTo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/addproject"
            android:drawablePadding="10dp"
            android:enabled="false"
            android:hint="@string/addProject"
            android:textCursorDrawable="@color/grey"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/addStatus"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/addstatus"
            android:drawablePadding="10dp"
            android:enabled="false"
            android:hint="@string/addStatus"
            android:textCursorDrawable="@color/grey"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/addTime"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/addcalendar"
            android:drawablePadding="10dp"
            android:enabled="false"
            android:hint="@string/addCalendar"
            android:textCursorDrawable="@color/grey"
            android:textSize="14sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/transition_background_drawable"
        android:src="@drawable/done"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="10dp"
        android:text="Создание задачи"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
